--- a/Selenium/environment.properties
+++ b/Selenium/environment.properties
@@ -1,1 +1,7 @@
 env=production
+
+amazondropbox_id=searchDropdownBox
+amazonsearchtext_name=field-keywords
+amazonsearchtext_id=twotabsearchtextbox
+amazonsearchbutton_xpath=//div[@class='nav-search-submit nav-sprite']//input[@class='nav-input']
+
