--- a/Selenium/environment.properties
+++ b/Selenium/environment.properties
@@ -5,3 +5,6 @@ amazonsearchtext_name=field-keywords
 amazonsearchtext_id=twotabsearchtextbox
 amazonsearchbutton_xpath=//div[@class='nav-search-submit nav-sprite']//input[@class='nav-input']
 
+
+dropvalue=Books
+textvalue=Harry Potter
